Added Search and Brand Filter

--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
 
         </ul>
         <!-- <input type="text" name="search" id="search" /> -->
-        <button class="btn btn-sm">Search</button>
+        <a href="./shop.html">
+          <button class="btn btn-sm">Search</button>
+
+        </a>
       </div>
 
       <div class="burger">
@@ -121,7 +124,7 @@
     </section>
 
     <section class="contact " id="contact">
-        <h2 class="text-center pad-sm-top font-md pad-sm-bot" style="font-family: 'Homemade Apple', cursive;">Contact Us</h2>
+        <h2 class="text-center pad-sm-top font-md pad-sm-bot" style="  font-family: Courier New", Courier, monospace;">Contact Us</h2>
         <div class="form">
             <input class="form-input" type="text" name="name" id="name" placeholder="Enter Your Name">
             <input class="form-input" type="number" name="phone" id="phone" placeholder="Enter Your Phone No.">
